[gd_scene load_steps=5 format=2]

[ext_resource path="res://instances/entities/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://instances/entities/enemies/grunt/grunt.gd" type="Script" id=2]
[ext_resource path="res://instances/entities/enemies/grunt/state_attack.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 28 )

[node name="Grunt" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_health = 25

[node name="StateIdle" parent="StateMachine" index="0"]
attack_when_spotted = true
spotted_state = "StateAttack"

[node name="StateAttack" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 3 )

[node name="WeaponTimer" type="Timer" parent="StateMachine/StateAttack" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="." index="2"]
position = Vector2( 9.53674e-07, 9.53674e-07 )
scale = Vector2( 0.5, 0.5 )
color = Color( 1, 0.431373, 0.431373, 1 )
polygon = PoolVector2Array( -48, -64, 48.155, -64, 64, -47.3497, 64, 48, 48, 64, -48, 64, -64, 48, -64, -48 )

[node name="Gun" type="Polygon2D" parent="." index="3"]
color = Color( 1, 0.960784, 0, 1 )
polygon = PoolVector2Array( -4, -32, -4, -48, 4, -48, 4, -32 )

[connection signal="player_lost" from="Sightline" to="StateMachine/StateAttack" method="_on_Sightline_player_lost"]
